--- a/Lab2/Lab_2_Starter_Code/starter_code/TestConfig/config3.ini
+++ b/Lab2/Lab_2_Starter_Code/starter_code/TestConfig/config3.ini
@@ -33,13 +33,13 @@ REORDER_PROBABILITY=.02
 # =====================================================================================================================
 [nodes]
 config_headers=sender,receiver
-file_to_send=./to_send_small.txt
+file_to_send=./to_send_large.txt
 
 [sender]
 id=1
 host=localhost
 port=8001
-window_size=40
+window_size=50
 log_file=./sender_monitor.log
 
 [receiver]
